# SquidAirlinesTheGame

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Info.plist.in  MainWindow.cpp  MainWindow.h  Overworld.mid  icon.rc  main.cpp  resources.qrc
.github/workflows/: win.yml
game/: GameSession.cpp  GameSession.h  Player.cpp  Player.h  audioengine.cpp  audioengine.h
game/objects/: buildingobject.cpp  buildingobject.h  fuelobject.cpp  fuelobject.h  gameobject.cpp  gameobject.h  healthobject.cpp  healthobject.h  tankobject.cpp  tankobject.h  thunderstormobject.cpp  thunderstormobject.h
menus/: AbstractMenu.cpp  AbstractMenu.h  MainMenu.cpp  MainMenu.h  gameovermenu.cpp  gameovermenu.h  pausemenu.cpp  pausemenu.h
menus/nav/: NavigationButton.cpp  NavigationButton.h  NavigationElement.cpp  NavigationElement.h  NavigationManager.cpp  NavigationManager.h
